# Manipulator_amr_90_dergee

./: camera.py  points_joint.json  set_point.py  set_sp.py
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
install/open_manipulator_x_gui/lib/open_manipulator_x_gui/: open_manipulator_x_gui_node
install/open_manipulator_x_playground/lib/open_manipulator_x_playground/: hello_moveit  main
install/open_manipulator_x_teleop/lib/open_manipulator_x_teleop/: open_manipulator_x_teleop
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/install/dynamixel_hardware_interface/share/dynamixel_hardware_interface/: package.sh
src/install/dynamixel_interfaces/share/dynamixel_interfaces/: package.sh
src/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh
src/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: package.sh
src/install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
src/install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.sh  package.sh
src/install/open_manipulator/share/open_manipulator/: local_setup.sh  package.sh
src/install/open_manipulator_x_bringup/share/open_manipulator_x_bringup/: local_setup.sh  package.sh
src/install/open_manipulator_x_description/share/open_manipulator_x_description/: local_setup.sh  package.sh
src/install/open_manipulator_x_gui/lib/open_manipulator_x_gui/: open_manipulator_x_gui_node
src/log/: latest_build
src/open_manipulator/open_manipulator_x_description/urdf/: open_manipulator_x_robot.urdf.xacro
src/open_manipulator/open_manipulator_x_moveit_config/config/: open_manipulator_x.srdf
src/open_manipulator/open_manipulator_x_moveit_config/launch/: moveit_core.launch.py
src/open_manipulator/open_manipulator_x_playground/: CMakeLists.txt
src/open_manipulator/open_manipulator_x_playground/include/: config.hpp  mainpulator_controller.hpp
src/open_manipulator/open_manipulator_x_playground/src/: main.cpp  points.json
(+13 files in other folders)
